--- a/templates/index.html
+++ b/templates/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <div class="container">
+        <div id="message-banner" class="status-banner hidden"></div>
         <!-- Agent Selection Screen -->
         <div id="agent-selection-screen" class="screen active">
             <div class="title-box">
