Fix: UI updates, combat log, and complete game flow
- Fix action names showing undefined (use agent1_state/agent2_state)
- Fix combat log showing undefined (iterate through actions array)
- Add debug logger for development
- Test complete battle flow until victory screen
- All game mechanics working: HP, Stamina, Buffs, Debuffs, Victory

--- a/templates/index.html
+++ b/templates/index.html
@@ -160,6 +160,7 @@
         </div>
     </div>
     
+    <script src="{{ url_for('static', filename='js/debug-logger.js') }}"></script>
     <script src="{{ url_for('static', filename='js/game.js') }}"></script>
 </body>
 </html>
